--- a/tealabs/package.json
+++ b/tealabs/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tealabs",
-  "version": "0.1.0",
+  "name": "Tuateah",
+  "version": "1.1.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
